Finalização da tradução do primeiro artigo

--- a/tradução.tex
+++ b/tradução.tex
@@ -40,10 +40,10 @@ a geração de explicações na maioria dos ambientes. O terceiro tópico é des
 modelos proposicionais para aprender conjuntos de decisão ótimos. Os modelos propostos baseiam-se
 trabalhos anteriores sobre inferência indutiva [19], mas introduzem uma série de variantes, permitindo
 para várias classes e também acomodando diferentes restrições de sobreposição. 
-The paper is organized as follows. Section 2 introduces the definitions and notation
-used in the remainder of the paper. The issue of overlap and explanation generation
-is investigated in Section 3. Propositional models for learning decision sets subject to
-different constraints on overlap are proposed in Section 4. Section 5 analyzes the performance
-of the proposed approach on representative datasets, and compares with earlier
-work [21]. Section 6 concludes the paper.
+O artigo está organizado da seguinte forma. Seção 2 apresenta as definições e notação
+usado no restante do artigo. A questão da sobreposição e geração de explicação
+é investigado na Seção 3. Modelos proposicionais para conjuntos de decisões de aprendizagem sujeitos a
+diferentes restrições sobre a sobreposição são propostas na Seção 4. A Seção 5 analisa o desempenho
+da abordagem proposta em conjuntos de dados representativos, e compara com anteriores
+trabalho [21]. A seção 6 conclui o artigo
 \end{document}
