Começo da introdução

--- a/Introdução.tex
+++ b/Introdução.tex
@@ -5,5 +5,14 @@
 \author{Victor Iuri Costa Sousa}
 \date{2020}
 \begin{document}
- Observamos nos ultimos anos uma evolução aparente no uso de aprendizagem de maquina
+Resumo : Os investimentos em aprendizagem de máquina vem aumentando de maneira exponencial e com isso também se torna maior o interesse em modelos de aprendizagem de máquinas que sejam interpretáveis que possam oferecer uma resolução mais ótima possível. Percebemos que o interesse em entender essas regras vem de suas aplicações, que são as mais diversas, porém em aplicações de modelos criticos onde necessitamos de uma atenção especial, no campo da medicina e do direito por exemplo, ondes a interpretações de modelos de aprendizagem de máquina tratam com vidas e o seu bem estar. Para solucionar questões como estas de precisão e interpretação utiliza-se o método SAT, que consegue tratar com grandes quantidades de literais e ainda mostra maneiras coesas de resolução de problemas, facilitando a maneira humada de entender a resolução desses problemas e com grandes garantias de exercer uma solução ótima para o problema. Ou seja uma ótima solução interpretável.
+
+
+resumo artigo 1:
+	De acordo com os sistemas de aprendizagem de máquinas que já existem procura um sistema que seja facilmente interpretado o método SAT e suas aplicações tem se mostrado um metodo que acompanha esse anseio, em busca de uma implementação de uma sistema ótimo e ao memso tempo interpretável executou-se um algorítimo que consiste nisso e instiga o pesquisador a busca de sistemas que possam superar essas condições em processamento precisão e interpretabilidade.
+	
+resumo artigo 2:
+
+
 \end{document}
+
